feat(core): Adding logstash encoder dep

--- a/src/spinnaker-dependencies.template
+++ b/src/spinnaker-dependencies.template
@@ -35,6 +35,7 @@ versions:
   junit: "{{junit:junit}}"
   lombok: "1.16.10" # "{{org.projectlombok:lombok}}"
   logback: "1.1.7"
+  logstash: "4.10"
   objenesis: "{{org.objenesis:objenesis}}"
   #okhttp bom: "{{com.squareup.okhttp:okhttp}}"
   okHttp: "2.7.0"
@@ -220,6 +221,7 @@ dependencies:
   junit: "junit:junit:${versions.junit}"
   lombok: "org.projectlombok:lombok:${versions.lombok}"
   logbackClassic: "ch.qos.logback:logback-classic:${versions.logback}"
+  logstashEncoder: "net.logstash.logback:logstash-logback-encoder:${versions.logstash}"
   objenesis: "org.objenesis:objenesis:${versions.objenesis}"
   okHttp: "com.squareup.okhttp:okhttp:${versions.okHttp}"
   okHttpUrlconnection: "com.squareup.okhttp:okhttp-urlconnection:${versions.okHttp}"
