feat(dynomite): Upgrades jedis version, adds dynomite

--- a/src/spinnaker-dependencies.yml
+++ b/src/spinnaker-dependencies.yml
@@ -1,7 +1,7 @@
 versions:
 # spinnaker libs
   fiat: "0.30.0"
-  kork: "1.101.0"
+  kork: "1.101.1"
   scheduledActions: "0.38.0"
   clouddriver: "1.669.0"
   front50: "1.72.0"
@@ -15,6 +15,7 @@ versions:
   batch: "3.0.4.RELEASE"
   cglib: "3.2.0"
   commonsExec: "1.3"
+  dynomite: "1.6.0-rc.2"
   eureka: "1.8.0"
   fabric8Api: "2.2.216"
   fabric8Client: "2.4.1"
@@ -30,7 +31,7 @@ versions:
   #httpcore bom: "4.4.6"
   httpcore: "4.3.3"
   jackson: "2.8.7" # "2.8.8"
-  jedis: "2.8.1" # "2.9.0"
+  jedis: "2.9.0" # "2.9.0"
   jsonPath: "2.2.0" # "2.2.0"
   junit: "4.12"
   lombok: "1.16.10" # "1.16.16"
@@ -164,9 +165,11 @@ dependencies:
   front50Gcs: "com.netflix.spinnaker.front50:front50-gcs:${versions.front50}"
   front50S3: "com.netflix.spinnaker.front50:front50-s3:${versions.front50}"
   kork: "com.netflix.spinnaker.kork:kork-core:${versions.kork}"
-  korkCassandra: "com.netflix.spinnaker.kork:kork-cassandra:${versions.kork}"
   korkArtifacts: "com.netflix.spinnaker.kork:kork-artifacts:${versions.kork}"
+  korkCassandra: "com.netflix.spinnaker.kork:kork-cassandra:${versions.kork}"
+  korkDynomite: "com.netflix.spinnaker.kork:kork-dynomite:${versions.kork}"
   korkExceptions: "com.netflix.spinnaker.kork:kork-exceptions:${versions.kork}"
+  korkJedis: "com.netflix.spinnaker.kork:kork-jedis:${versions.kork}"
   korkJedisTest: "com.netflix.spinnaker.kork:kork-jedis-test:${versions.kork}"
   korkSecurity: "com.netflix.spinnaker.kork:kork-security:${versions.kork}"
   korkStackdriver: "com.netflix.spinnaker.kork:kork-stackdriver:${versions.kork}"
@@ -201,6 +204,7 @@ dependencies:
   bootWeb: "org.springframework.boot:spring-boot-starter-web:${versions.springBoot}"
   cglib: "cglib:cglib-nodep:${versions.cglib}"
   commonsExec: "org.apache.commons:commons-exec:${versions.commonsExec}"
+  dynomite: "com.netflix.dyno:dyno-jedis:${versions.dynomite}"
   eurekaClient: "com.netflix.eureka:eureka-client:${versions.eureka}"
   fabric8Api: "io.fabric8:kubernetes-api:${versions.fabric8Api}"
   fabric8Client: "io.fabric8:kubernetes-client:${versions.fabric8Client}"
