fix(*): non-bom junit version; i love dep mgmt

--- a/src/spinnaker-dependencies.template
+++ b/src/spinnaker-dependencies.template
@@ -32,7 +32,8 @@ versions:
   jackson: "2.9.2" # "{{com.fasterxml.jackson.core:jackson-core}}"
   jedis: "2.9.0" # "{{redis.clients:jedis}}"
   jsonPath: "2.2.0" # "{{com.jayway.jsonpath:json-path}}"
-  junit: "4.12.3" # "{{junit:junit}}"
+  junit: "{{junit:junit}}"
+  junitVintage: "4.12.3"
   junit5: "1.0.2"
   jupiter: "5.0.2"
   kotlin: "1.2.0"
@@ -244,7 +245,7 @@ dependencies:
   junitJupiterEngine: "org.junit.jupiter:junit-jupiter-engine:${versions.jupiter}"
   junitPlatformRunner: "org.junit.platform:junit-platform-runner:${versions.junit5}"
   junitPlatformLauncher: "org.junit.platform:junit-platform-launcher:${versions.junit5}"
-  junitVintageEngine: "org.junit.vintage:junit-vintage-engine:${versions.junit}"
+  junitVintageEngine: "org.junit.vintage:junit-vintage-engine:${versions.junitVintage}"
   lombok: "org.projectlombok:lombok:${versions.lombok}"
   logbackClassic: "ch.qos.logback:logback-classic:${versions.logback}"
   logstashEncoder: "net.logstash.logback:logstash-logback-encoder:${versions.logstash}"
