--- a/src/spinnaker-dependencies.yml
+++ b/src/spinnaker-dependencies.yml
@@ -32,7 +32,8 @@ versions:
   jackson: "2.9.2" # "2.8.10"
   jedis: "2.9.0" # "2.9.0"
   jsonPath: "2.2.0" # "2.2.0"
-  junit: "4.12.3" # "4.12"
+  junit: "4.12"
+  junitVintage: "4.12.3"
   junit5: "1.0.2"
   jupiter: "5.0.2"
   kotlin: "1.2.0"
@@ -244,7 +245,7 @@ dependencies:
   junitJupiterEngine: "org.junit.jupiter:junit-jupiter-engine:${versions.jupiter}"
   junitPlatformRunner: "org.junit.platform:junit-platform-runner:${versions.junit5}"
   junitPlatformLauncher: "org.junit.platform:junit-platform-launcher:${versions.junit5}"
-  junitVintageEngine: "org.junit.vintage:junit-vintage-engine:${versions.junit}"
+  junitVintageEngine: "org.junit.vintage:junit-vintage-engine:${versions.junitVintage}"
   lombok: "org.projectlombok:lombok:${versions.lombok}"
   logbackClassic: "ch.qos.logback:logback-classic:${versions.logback}"
   logstashEncoder: "net.logstash.logback:logstash-logback-encoder:${versions.logstash}"
