--- a/src/spinnaker-dependencies.template
+++ b/src/spinnaker-dependencies.template
@@ -1,7 +1,7 @@
 versions:
 # spinnaker libs
   fiat: "0.49.8"
-  kork: "2.1.3"
+  kork: "2.2.0"
   scheduledActions: "0.39.0"
   clouddriver: "2.85.3"
   front50: "1.72.0"
@@ -180,17 +180,19 @@ dependencies:
   front50S3: "com.netflix.spinnaker.front50:front50-s3:${versions.front50}"
   kork: "com.netflix.spinnaker.kork:kork-core:${versions.kork}"
   korkArtifacts: "com.netflix.spinnaker.kork:kork-artifacts:${versions.kork}"
+  korkAws: "com.netflix.spinnaker.kork:kork-aws:${versions.kork}"
   korkCassandra: "com.netflix.spinnaker.kork:kork-cassandra:${versions.kork}"
   korkDynomite: "com.netflix.spinnaker.kork:kork-dynomite:${versions.kork}"
   korkExceptions: "com.netflix.spinnaker.kork:kork-exceptions:${versions.kork}"
   korkJedis: "com.netflix.spinnaker.kork:kork-jedis:${versions.kork}"
   korkJedisTest: "com.netflix.spinnaker.kork:kork-jedis-test:${versions.kork}"
   korkSecurity: "com.netflix.spinnaker.kork:kork-security:${versions.kork}"
+  korkSql: "com.netflix.spinnaker.kork:kork-sql:${versions.kork}"
+  korkSqlTest: "com.netflix.spinnaker.kork:kork-sql-test:${versions.kork}"
   korkStackdriver: "com.netflix.spinnaker.kork:kork-stackdriver:${versions.kork}"
   korkSwagger: "com.netflix.spinnaker.kork:kork-swagger:${versions.kork}"
   korkHystrix: "com.netflix.spinnaker.kork:kork-hystrix:${versions.kork}"
   korkWeb: "com.netflix.spinnaker.kork:kork-web:${versions.kork}"
-  korkAws: "com.netflix.spinnaker.kork:kork-aws:${versions.kork}"
   scheduledActionsCore: "com.netflix.scheduledactions:scheduled-actions-core:${versions.scheduledActions}"
   scheduledActionsCassandra: "com.netflix.scheduledactions:scheduled-actions-cassandra:${versions.scheduledActions}"
   scheduledActionsClustered: "com.netflix.scheduledactions:scheduled-actions-clustered:${versions.scheduledActions}"
