--- a/src/spinnaker-dependencies.yml
+++ b/src/spinnaker-dependencies.yml
@@ -59,6 +59,7 @@ versions:
   spring: "4.3.14.RELEASE"
   springBoot: "1.5.10.RELEASE"
   springSecurity: "4.2.4.RELEASE"
+  ulid: "8.2.0"
 
 groups:
   akka:
@@ -287,3 +288,4 @@ dependencies:
   springSecurityCore: "org.springframework.security:spring-security-core:${versions.springSecurity}"
   springSecurityWeb: "org.springframework.security:spring-security-web:${versions.springSecurity}"
   springTest: "org.springframework:spring-test:${versions.spring}"
+  ulid: "de.huxhorn.sulky:de.huxhorn.sulky.ulid:${versions.ulid}"
