--- a/src/spinnaker-dependencies.template
+++ b/src/spinnaker-dependencies.template
@@ -1,7 +1,7 @@
 versions:
 # spinnaker libs
   fiat: "0.49.8"
-  kork: "3.0.1"
+  kork: "3.1.0"
   scheduledActions: "0.39.0"
   clouddriver: "2.88.4"
   front50: "1.131.1"
@@ -194,6 +194,7 @@ dependencies:
   korkSqlTest: "com.netflix.spinnaker.kork:kork-sql-test:${versions.kork}"
   korkStackdriver: "com.netflix.spinnaker.kork:kork-stackdriver:${versions.kork}"
   korkSwagger: "com.netflix.spinnaker.kork:kork-swagger:${versions.kork}"
+  korkTelemetry: "com.netflix.spinnaker.kork:kork-telemetry:${versions.kork}"
   korkHystrix: "com.netflix.spinnaker.kork:kork-hystrix:${versions.kork}"
   korkTest: "com.netflix.spinnaker.kork:kork-test:${versions.kork}"
   korkWeb: "com.netflix.spinnaker.kork:kork-web:${versions.kork}"
