chore(*): Add resilience4j

--- a/src/spinnaker-dependencies.yml
+++ b/src/spinnaker-dependencies.yml
@@ -48,6 +48,7 @@ versions:
   #okhttp bom: "2.7.5"
   okHttp: "2.7.0"
   okHttp3: "3.10.0"
+  resilience4j: "0.13.2"
   retrofit1okHttp3Client: "1.1.0"
   redisEmbedded: "0.8.0"
   retrofit: "1.9.0"
@@ -269,6 +270,7 @@ dependencies:
   okHttpUrlconnection: "com.squareup.okhttp:okhttp-urlconnection:${versions.okHttp}"
   okHttpApache: "com.squareup.okhttp:okhttp-apache:${versions.okHttp}"
   redisEmbedded: "com.netflix.spinnaker.embedded-redis:embedded-redis:${versions.redisEmbedded}"
+  resilience4jRetry: "io.github.resilience4j:resilience4j-retry:${versions.resilience4j}"
   retrofit: "com.squareup.retrofit:retrofit:${versions.retrofit}"
   retrofitJackson: "com.squareup.retrofit:converter-jackson:${versions.retrofit}"
   retrofitMock: "com.squareup.retrofit:retrofit-mock:${versions.retrofit}"
